--- a/index.html
+++ b/index.html
@@ -1,37 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Startup</title>
+<head>
+	<title>Sound Effect Project#1 </title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+<h1>Press your keyboard for the sound effect!</h1>
 
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<div class='keys'>
+	<div class = 'key' data-key = '65' >
+		<kbd>Press: A</kbd> <br>
+		<span class='sound'>Fire Crackers</span>
+	</div>
+	<div class = 'key' data-key = '83' >
+		<kbd>Press: S</kbd> <br>
+		<span class='sound'>Morning!</span>
+	</div>
+	<div class = 'key' data-key = '68' >
+		<kbd>Press: D</kbd> <br>
+		<span class='sound'>Laughing</span>
+	</div>
+	<div class = 'key' data-key = '70' >
+		<kbd>Press: F</kbd> <br>
+		<span class='sound'>Chirping</span>
+	</div>
+	<div class = 'key' data-key = '71' >
+		<kbd>Press: G</kbd> <br>
+		<span class='sound'>Slurp</span>
+	</div>
+	<div class = 'key' data-key = '72' >
+		<kbd>Press: H</kbd> <br>
+		<span class='sound'>Fart</span>
+	</div>
+	<div class = 'key' data-key = '74' >
+		<kbd>Press: J</kbd> <br>
+		<span class='sound'>Punch</span>
+	</div>
+	<div class = 'key' data-key = '75' >
+		<kbd>Press: K</kbd> <br>
+		<span class='sound'>Bubbling</span>
+	</div>
+	<div class = 'key' data-key = '76' >
+		<kbd>Press: L</kbd> <br>
+		<span class='sound'>Sneeze</span>
+	</div>
 
-    <!-- Note that the below Bootstrap file is a specific version. If you grab the most
-    current from Bootstrap website, you will see the button grow transition being a lot faster
-    than in my video. Use whichever style sheet you like best! -->
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+</div>
 
-    <!-- My own stylesheet -->
-    <link href="style.css" rel="stylesheet">
-  </head>
-  <body>
-    <header class="startup text-center text-white d-flex">
-      <div class="container my-auto">
-        <div class="row">
-          <div class="col-lg-12 my-auto">
-            <h1 class="text-uppercase faded">
-              <strong>the biggest startup event of the year</strong>
-            </h1>
-            <hr>
-          </div>
-          <div class="col-lg-12 my-auto">
-            <button class="btn btn-primary btn-xl">Find Out More</button>
-          </div>
-        </div>
-      </div>
-    </header>
+<audio data-key="65" src="firecraker.wav"> </audio>
+<audio data-key="83" src="goodmorning.wav"> </audio>
+<audio data-key="68" src="laugh.wav"> </audio>
+<audio data-key="70" src="bird.wav"> </audio>
+<audio data-key="71" src="slurp.wav"> </audio>
+<audio data-key="72" src="fart.wav"> </audio>
+<audio data-key="74" src="punch.wav"> </audio>
+<audio data-key="75" src="bubbling.wav"> </audio>
+<audio data-key="76" src="babysneeze.wav"> </audio>
 
-  </body>
 
+
+<script type="text/javascript">
+window.addEventListener('keydown',function(e){
+	const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`); //e means the value of addEventListener
+	const key= document.querySelector(`.key[data-key="${e.keyCode}"]`);
+	if (!audio) return; // stop the function from running!
+	audio.currentTime = 0; //rewmidn to the start
+	audio.play();
+	key.classList.add('playing');
+});
+function removeTransition(e){
+if (e.propertyName !== 'transform') return; 
+this.classList.remove('playing')}
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitionend',removeTransition))
+</script>
+
+<hr>
+<footer> 2019 April 11th. Project#1</footer>
+</body>
+
+
+<!-- Comment: resouce used soundbible.com & background from unsplash.com & codes for javascript are copied from the WesBos Day1 challenge. -->
 </html>
