--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 </div>
 
-<audio data-key="65" src="Firecracker.wav"> </audio>
+<audio data-key="65" src="Firecraker.wav"> </audio>
 <audio data-key="83" src="goodmorning.wav"> </audio>
 <audio data-key="68" src="laugh.wav"> </audio>
 <audio data-key="70" src="bird.wav"> </audio>
