--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ keys.forEach(key => key.addEventListener('transitionend',removeTransition))
 </script>
 
 <hr>
-<footer> 2019 April 11th. Project#1</footer>
+<footer> Cindy Lin. 2019 Project </footer>
 </body>
 
 
-<!-- Comment: resouce used soundbible.com & background from unsplash.com & codes for javascript are copied from the WesBos Day1 challenge. -->
+<!-- Comment: resouce used soundbible.com & background from unsplash.com & codes for javascript are based on WesBos Js30 Day1 challenge. -->
 </html>
