--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Sound Effect Project#1 </title>
+	<title>Sound Effect</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Press your keyboard for the sound effect!</h1>
+<h1>Press Keyboard for the sound effect!</h1>
 
 <div class='keys'>
 	<div class = 'key' data-key = '65' >
@@ -61,10 +61,10 @@
 
 <script type="text/javascript">
 window.addEventListener('keydown',function(e){
-	const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`); //e means the value of addEventListener
+	const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
 	const key= document.querySelector(`.key[data-key="${e.keyCode}"]`);
-	if (!audio) return; // stop the function from running!
-	audio.currentTime = 0; //rewmidn to the start
+	if (!audio) return;
+	audio.currentTime = 0; 
 	audio.play();
 	key.classList.add('playing');
 });
@@ -77,7 +77,7 @@ keys.forEach(key => key.addEventListener('transitionend',removeTransition))
 </script>
 
 <hr>
-<footer> Cindy Lin. 2019 Project </footer>
+<footer> Web Dev Ninja Project</footer>
 </body>
 
 
