--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Press Keyboard for the sound effect!</h1>
+<h1>Press Keyboard For the Sound Effect!</h1>
 
 <div class='keys'>
 	<div class = 'key' data-key = '65' >
@@ -77,7 +77,7 @@ keys.forEach(key => key.addEventListener('transitionend',removeTransition))
 </script>
 
 <hr>
-<footer> Web Dev Ninja Project</footer>
+<footer> Web Dev Ninja Project 2019.</footer>
 </body>
 
 </html>
