--- a/index.html
+++ b/index.html
@@ -1,90 +1,100 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Sound Effect</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="shortcut icon" href="./favicons/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicons/favicon-32x32.png">
-    <link rel="manifest" href="./favicons/site.webmanifest">
-    <link rel="mask-icon" href="./favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-</head>
-<body>
-<h1>Press Keyboard For the Sound Effect!</h1>
+  <head>
+    <title>Sound Effect</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="shortcut icon" href="./favicons/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicons/favicon-32x32.png"
+    />
+    <link rel="manifest" href="./favicons/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./favicons/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+  </head>
+  <body>
+    <h1>Press Keyboard For the Sound Effect!</h1>
 
-<div class='keys'>
-	<div class = 'key' data-key = '65' >
-		<kbd>Press: A</kbd> <br>
-		<span class='sound'>Fire Crackers</span>
-	</div>
-	<div class = 'key' data-key = '83' >
-		<kbd>Press: S</kbd> <br>
-		<span class='sound'>Morning!</span>
-	</div>
-	<div class = 'key' data-key = '68' >
-		<kbd>Press: D</kbd> <br>
-		<span class='sound'>Laughing</span>
-	</div>
-	<div class = 'key' data-key = '70' >
-		<kbd>Press: F</kbd> <br>
-		<span class='sound'>Chirping</span>
-	</div>
-	<div class = 'key' data-key = '71' >
-		<kbd>Press: G</kbd> <br>
-		<span class='sound'>Slurp</span>
-	</div>
-	<div class = 'key' data-key = '72' >
-		<kbd>Press: H</kbd> <br>
-		<span class='sound'>Fart</span>
-	</div>
-	<div class = 'key' data-key = '74' >
-		<kbd>Press: J</kbd> <br>
-		<span class='sound'>Punch</span>
-	</div>
-	<div class = 'key' data-key = '75' >
-		<kbd>Press: K</kbd> <br>
-		<span class='sound'>Bubbling</span>
-	</div>
-	<div class = 'key' data-key = '76' >
-		<kbd>Press: L</kbd> <br>
-		<span class='sound'>Sneeze</span>
-	</div>
+    <div class="keys">
+      <div class="key" data-key="65">
+        <kbd>Press: A</kbd> <br />
+        <span class="sound">Fire Crackers</span>
+      </div>
+      <div class="key" data-key="83">
+        <kbd>Press: S</kbd> <br />
+        <span class="sound">Morning!</span>
+      </div>
+      <div class="key" data-key="68">
+        <kbd>Press: D</kbd> <br />
+        <span class="sound">Laughing</span>
+      </div>
+      <div class="key" data-key="70">
+        <kbd>Press: F</kbd> <br />
+        <span class="sound">Chirping</span>
+      </div>
+      <div class="key" data-key="71">
+        <kbd>Press: G</kbd> <br />
+        <span class="sound">Slurp</span>
+      </div>
+      <div class="key" data-key="72">
+        <kbd>Press: H</kbd> <br />
+        <span class="sound">Fart</span>
+      </div>
+      <div class="key" data-key="74">
+        <kbd>Press: J</kbd> <br />
+        <span class="sound">Punch</span>
+      </div>
+      <div class="key" data-key="75">
+        <kbd>Press: K</kbd> <br />
+        <span class="sound">Bubbling</span>
+      </div>
+      <div class="key" data-key="76">
+        <kbd>Press: L</kbd> <br />
+        <span class="sound">Sneeze</span>
+      </div>
+    </div>
 
-</div>
+    <audio data-key="65" src="audio/Firecraker.wav"></audio>
+    <audio data-key="83" src="audio/goodmorning.wav"></audio>
+    <audio data-key="68" src="audio/laugh.wav"></audio>
+    <audio data-key="70" src="audio/bird.wav"></audio>
+    <audio data-key="71" src="audio/slurp.wav"></audio>
+    <audio data-key="72" src="audio/fart.wav"></audio>
+    <audio data-key="74" src="audio/punch.wav"></audio>
+    <audio data-key="75" src="audio/bubbling.wav"></audio>
+    <audio data-key="76" src="audio/babysneeze.wav"></audio>
 
-<audio data-key="65" src="Firecraker.wav"> </audio>
-<audio data-key="83" src="goodmorning.wav"> </audio>
-<audio data-key="68" src="laugh.wav"> </audio>
-<audio data-key="70" src="bird.wav"> </audio>
-<audio data-key="71" src="slurp.wav"> </audio>
-<audio data-key="72" src="fart.wav"> </audio>
-<audio data-key="74" src="punch.wav"> </audio>
-<audio data-key="75" src="bubbling.wav"> </audio>
-<audio data-key="76" src="babysneeze.wav"> </audio>
+    <script type="text/javascript">
+      window.addEventListener("keydown", function (e) {
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+        if (!audio) return;
+        audio.currentTime = 0;
+        audio.play();
+        key.classList.add("playing");
+      });
+      function removeTransition(e) {
+        // console.log(e, "what is transitioned");
+        if (e.propertyName !== "transform") return;
+        this.classList.remove("playing");
+      }
 
-
-
-<script type="text/javascript">
-window.addEventListener('keydown',function(e){
-	const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-	const key= document.querySelector(`.key[data-key="${e.keyCode}"]`);
-	if (!audio) return;
-	audio.currentTime = 0; 
-	audio.play();
-	key.classList.add('playing');
-});
-function removeTransition(e){
-if (e.propertyName !== 'transform') return; 
-this.classList.remove('playing')}
-
-const keys = document.querySelectorAll('.key');
-keys.forEach(key => key.addEventListener('transitionend',removeTransition))
-</script>
-
-<hr>
-<footer> Web Dev Ninja Project 2019.</footer>
-</body>
-
+      const keys = document.querySelectorAll(".key");
+      keys.forEach((key) =>
+        key.addEventListener("transitionend", removeTransition)
+      );
+    </script>
+  </body>
 </html>
